# stig

./: .gitignore  MERGE_PLAN.md  README.md  TUTORIAL.md  pyproject.toml
.github/workflows/: build-dmg.yml  ci.yml
packaging/: README-dmg.txt  entry.py  install.command  stig.spec
stig/: __init__.py  annotations.py  checks.py  cli.py  context.py  diffutil.py  gitutil.py  graph.py  handlers.py  models.py  patcher.py  regions.py  repo.py  scheduler.py
tests/: conftest.py  test_annotations.py  test_checks.py  test_cli.py  test_models.py  test_patcher.py  test_regions.py  test_repo_and_diff.py  test_scheduler.py
